# appointment_system_website

./: .env  .env.example  .gitignore  DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  README.md  README_ATLAS.md  add_doctors_to_atlas.py  app.py  atlas_setup.py  clean_atlas_duplicates.py  index.py  local_users.json  pyproject.toml  requirements.txt  setup_appointments.py  setup_openai.py  test_ai.py  vercel.json  vercel_app.py  vercel_app_fixed.py
api/: index.py
data/: doctors.json
static/: style.css
templates/: appointment_bill.html  book.html  booking.html  booking_error.html  confirmation.html  dashboard.html  index.html  login.html  register.html  result.html  specialists.html
