[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "appointment-system"
version = "1.0.0"
description = "AI-powered medical appointment booking system"
dependencies = [
    "flask==2.3.3",
    "pymongo==4.5.0",
    "python-dotenv==1.0.0",
    "openai==1.3.7",
    "google-generativeai==0.3.2",
    "groq==0.4.1"
]

[project.scripts]
appointment-system = "app:app"
